download block done!! && font-size bug fixed (not responsive)

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ main{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1.5fr 1fr 1fr 1.2fr;
+    grid-template-rows: 2fr 1fr 1fr 1.2fr;
     gap: 20px;
     grid-template-areas: 
     "boy download palatte strength"
@@ -39,12 +39,6 @@ main{
     "redefine logo logo signup"
     "train train girl signup"
     ;
-}
-
-.text{
-    font-family: "Suisse Int'l", sans-serif;
-    font-size: 12px;
-    letter-spacing: 1px;
 }
 
 .box{
@@ -92,7 +86,7 @@ main{
     justify-content: center;
 }
 
-.icon{
+#boy .icon{
     height: 50px;
     width: 50px;
     background-color: #FED702;
@@ -102,7 +96,7 @@ main{
     align-items: center;
 }
 
-.icon i{
+#boy .icon i{
     font-size: 30px;
 }
 
@@ -113,20 +107,124 @@ main{
 }
 
 .boxy-text h1{
-    font-size: 20px;
+    font-size: 26px;
 }
 
 .boxy-text p{
-    font-size: 10px;
+    font-size: 16px;
 }
 
 #download{
     grid-area: download;
     background-color: #FED702;
+    padding: 30px;
+    font-family: 'suisse int\'l', sans-serif;
+    position: relative;
+    overflow: hidden;
+
+}
+#download svg{
+    position:absolute;
+    scale: 4.0;
+    transform: translate(80%, 50%);
 }
 
+#download #design{
+    height: 35%;
+    display: flex;
+    align-items: center;
+    gap:10px;
+    position: relative;
+}
+
+#download #design div:nth-child(1){
+    height:20%;
+    width:3px;
+    background-color: black;
+    border-radius: 1.5px;
+}
+#download #design div:nth-child(2){
+    height:25%;
+    width:4px;
+    background-color: black;
+    border-radius: 2px;
+}
+#download #design div:nth-child(3){
+    height:32%;
+    width:5px;
+    background-color: black;
+    border-radius: 2.5px;
+}
+#download #design div:nth-child(4){
+    height:40%;
+    width:6px;
+    background-color: black;
+    border-radius: 3px;
+}
+#download #design div:nth-child(5){
+    height:49%;
+    width:7px;
+    background-color: black;
+    border-radius: 4.5px;
+}
+#download #design div:nth-child(6){
+    height:59%;
+    width:8px;
+    background-color: black;
+    border-radius: 4px;
+}
+#download #design div:nth-child(7){
+    height:70%;
+    width:9px;
+    background-color: black;
+    border-radius: 4.5px;
+}
+
+#download .text{
+    height:35%;
+    font-size: 35px;
+    padding-right: 20px;
+    margin-bottom: 10px;
+    position: relative;
+    padding-right: 30%;
+}
+
+#download .downloads{
+    height:30%;
+    display: flex;
+    gap: 20px;
+    position: relative;
+}
+
+.playstore, .appstore{
+    height: 60%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+}
+
+#download .icon{
+    font-size: 50px;
+    margin-right: 10px;
+}
+
+#download .big-text{
+    font-size: 26px;
+    letter-spacing: 1px;
+}
+
+.small-text{
+    font-size: 12px;
+    letter-spacing: 1px;
+}
+
+
 #palatte{
-    padding: 50px 30px 30px 30px;
+    padding: 60px 40px 40px 40px;
     grid-area: palatte;
     background-color: #FEFEFE;
     display: flex;
@@ -136,9 +234,13 @@ main{
 
 #palatte p{
     font-family: "Suisse Int'l", sans-serif;
-    font-size: 12px;
+    font-size: 20px;
     letter-spacing: 1px;
     margin-bottom: 5px;
+}
+
+#palatte h1{
+    font-size: 60px;
 }
 
 #body-fonts{
@@ -146,12 +248,12 @@ main{
 }
 
 #color-palette{
-    height: 14px;
+    height: 30px;
     display: flex;
     gap: -10px;
     width: 100%;
     border: 1px solid black;
-    border-radius: 7px;
+    border-radius: 15px;
     overflow: hidden;
     position: relative;
 }
@@ -160,7 +262,7 @@ main{
     width: 100%;
     height: 100%;
     position: absolute;
-    border-radius: 7px;
+    border-radius: 15px;
 }
 
 #pink{
@@ -191,6 +293,11 @@ main{
     justify-content: space-between;
 }
 
+#strength #top-strength .text, #location-container p{
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+
 #top-strength{
     display: flex;
     align-items: center;
@@ -211,7 +318,7 @@ main{
 }
 
 #middle-strength{
-    font-size: 30px;
+    font-size: 40px;
 }
 
 #bottom-strength{
@@ -232,8 +339,8 @@ main{
 }
 
 #bottom-strength .bg-logo-container svg{
-    scale: 2.0;
-    transform: translate(40%, 30%);
+    scale: 3.0;
+    transform: translate(100%, 40%);
 }
 
 #location-container{
@@ -271,7 +378,12 @@ main{
 }
 
 #logo p{
-    font-size: 100px;
+    font-size: 170px;
+}
+
+#logo svg{
+    scale: 2.0;
+    margin-right: 50px;
 }
 
 #signup{
@@ -357,7 +469,7 @@ main{
 }
 
 #potential h1{
-    font-size: 25px;
+    font-size: 35px;
 }
 
 #button{
@@ -386,7 +498,7 @@ main{
 }
 
 #redefine h1{
-    font-size: 25px;
+    font-size: 35px;
 }
 
 #bottom-redefine{
@@ -441,7 +553,7 @@ main{
 
 #train #text{
     padding-left: 30px;
-    font-size: 12px;
+    font-size: 22px;
     grid-area: text;
 }
 
@@ -451,12 +563,14 @@ main{
 }
 
 #train #count h1{
-    font-size: 60px;
+    font-size: 90px;
+    text-align: center;
 }
 
 #train #count p{
     font-family: 'Suisse Int\'l', sans-serif;
     letter-spacing: 1px;
+    text-align: center;
 }
 
 #train #people{
